# sulphur_cli

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: asset_management.rs  duration_utils.rs  file_utils.rs  instance_management.rs  main.rs  menu.rs  ui.rs
